[gd_scene load_steps=5 format=3 uid="uid://cnsvxmktmiwwx"]

[ext_resource type="Texture2D" uid="uid://gg4whf2tdfgg" path="res://graphics/enemies/scout.png" id="1_i70sm"]
[ext_resource type="Script" uid="uid://b7mw34r3i5dos" path="res://scenes/enemies/scout.gd" id="1_ns734"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ns734"]
radius = 45.0444

[sub_resource type="CircleShape2D" id="CircleShape2D_08kc0"]
radius = 750.131

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_ns734")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(40, 23)
rotation = 1.5708
texture = ExtResource("1_i70sm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ns734")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_08kc0")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(117, -32)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(119, 6)

[node name="LaserCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
